--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-  	<title>My Website </title>
+  	<title>Lab9 </title>
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-	<script type="text/javascript" src="lab9.js"></script>
+	<script type="text/javascript" src="lab9_q3_v2.js"></script>
 	<link rel=stylesheet type="text/css" href="style.css"/>
 </head>
 <body>
@@ -15,11 +15,11 @@
   <div>
     <label>X-Axis</label>
     <select id="sel-x">
-      <option value="mpg">mpg</option>
+      <!-- <option value="mpg">mpg</option> -->
     </select>
     <label>Y-Axis</label>
     <select id="sel-y">
-      <option value="">displacement</option>
+      <!-- <option value="">displacement</option> -->
     </select>
   </div>
   <div>
